// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RegistrationModal /> renders closed modal 1`] = `
<div
  className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
/>
`;

exports[`<RegistrationModal /> renders modal with top and bottom text 1`] = `
[
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <div
    aria-label="global.register"
    data-dialog={true}
    hidden={false}
    id="id-g"
    onAnimationEnd={[Function]}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    role="dialog"
    tabIndex={-1}
  >
    <div
      className="sc-bcXGCL embsrb sc-fvEvfv cap-modal__overlay"
      onClick={[Function]}
      style={
        {
          "opacity": 0,
        }
      }
    >
      <div
        className="sc-bcXGCL dRDYMK sc-fcCDYY ksOTIU cap-modal"
        style={
          {
            "opacity": 0,
            "transform": "translateY(-20px) translateZ(0)",
            "zIndex": 9000,
          }
        }
      >
        <header
          className="sc-bcXGCL jJSzZW cap-modal__header"
        >
          <div
            className="sc-bcXGCL jevVsb"
          >
            <h4
              className="sc-bcXGCL dwAFlO cap-heading"
              id="modal-title"
              style={
                {
                  "marginLeft": 0,
                  "marginTop": 0,
                }
              }
            >
              global.register
            </h4>
          </div>
          <button
            aria-describedby="modal-title"
            className="sc-bcXGCL cNICVM"
            onClick={[Function]}
            type="button"
          >
            <svg
              aria-hidden="false"
              className="sc-bcXGCL sc-oZHua JBVPO cCzERh cap-icon"
              fill="none"
              height="1em"
              role="img"
              viewBox="0 0 12 12"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M1 11 11 1M1 1l10 10"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={0.8}
              />
            </svg>
          </button>
        </header>
        <div
          className="sc-bcXGCL eqUaSq cap-modal__body"
        >
          <div
            className="sc-bcXGCL iAhoTX"
          >
            <div
              className=" ql-editor wysiwyg-render"
              dangerouslySetInnerHTML={
                {
                  "__html": "Jsuis o top",
                }
              }
            />
          </div>
          <div
            className="sc-bcXGCL fVgOgb cap-form-control"
          >
            <label
              className="sc-bcXGCL fTPHCc cap-form-label"
              htmlFor=":r0:"
              style={
                {
                  "marginLeft": 0,
                  "marginTop": 0,
                }
              }
            >
              <span
                className="sc-bcXGCL dQChsN cap-text"
                style={
                  {
                    "marginLeft": 0,
                    "marginTop": 0,
                  }
                }
              >
                global.email
              </span>
            </label>
            <input
              aria-required={true}
              autoComplete="email"
              autoFocus={true}
              className="sc-bcXGCL sc-dwnPIk egzrup eCNeCU cap-input"
              disabled={false}
              id=":r0:"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="email.placeholder"
              readOnly={false}
              required={true}
              type="email"
            />
          </div>
          <div
            className="sc-bcXGCL klvDp"
          >
            <div
              className="sc-bcXGCL hQCGLB cap-form-control"
            >
              <label
                className="sc-bcXGCL fTPHCc cap-form-label"
                htmlFor=":r1:"
                style={
                  {
                    "marginLeft": 0,
                    "marginTop": 0,
                  }
                }
              >
                <span
                  className="sc-bcXGCL dQChsN cap-text"
                  style={
                    {
                      "marginLeft": 0,
                      "marginTop": 0,
                    }
                  }
                >
                  registration.password
                </span>
              </label>
              <div
                className="sc-bcXGCL sc-dwnPIk hsfhbV eCNeCU cap-input-outer"
              >
                <input
                  aria-required={true}
                  autoComplete="off"
                  autoFocus={true}
                  className="sc-bcXGCL dANhtW cap-input"
                  disabled={false}
                  id=":r1:"
                  name="plainPassword"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  readOnly={false}
                  required={true}
                  type="password"
                />
                <button
                  aria-describedby=":r2:"
                  className="sc-bcXGCL fROdoz"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onClickCapture={[Function]}
                  onFocusCapture={[Function]}
                  onKeyDownCapture={[Function]}
                  onKeyPressCapture={[Function]}
                  onMouseDown={[Function]}
                  onMouseDownCapture={[Function]}
                  onMouseEnter={[Function]}
                  onMouseMove={[Function]}
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="sc-bcXGCL sc-oZHua JBVPO cCzERh cap-icon cap-input-icon"
                    fill="none"
                    height="1em"
                    viewBox="0 0 12 10"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m1.903 9 8.333-8M4.65 8.134c.437.135.892.203 1.35.2 1.822.03 3.67-1.25 4.81-2.506a.74.74 0 0 0 0-.99 9 9 0 0 0-1.366-1.225M7.072 2.459a4.2 4.2 0 0 0-1.073-.126c-1.791-.03-3.644 1.223-4.81 2.505a.74.74 0 0 0 0 .99q.534.582 1.156 1.066"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                      strokeWidth={0.8}
                    />
                    <path
                      d="M4.333 5.333a1.666 1.666 0 0 1 1.666-1.666M7.666 5.333A1.667 1.667 0 0 1 5.999 7"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                      strokeWidth={0.8}
                    />
                  </svg>
                </button>
                <span
                  hidden={true}
                  id=":r2:"
                  style={
                    {
                      "position": "fixed",
                    }
                  }
                />
              </div>
            </div>
          </div>
          <div
            className="sc-bcXGCL fVgOgb cap-form-control"
          >
            <label
              className="sc-bcXGCL fTPHCc cap-form-label"
              htmlFor="username"
              style={
                {
                  "marginLeft": 0,
                  "marginTop": 0,
                }
              }
            >
              <span
                className="sc-bcXGCL dQChsN cap-text"
                style={
                  {
                    "marginLeft": 0,
                    "marginTop": 0,
                  }
                }
              >
                global.fullname
              </span>
            </label>
            <input
              aria-required={true}
              autoComplete="username"
              className="sc-bcXGCL sc-dwnPIk egzrup eCNeCU cap-input"
              disabled={false}
              id="username"
              minLength={2}
              name="username"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="global.placeholder.name"
              readOnly={false}
              required={true}
              type="text"
            />
          </div>
          <div
            className="sc-bcXGCL fVgOgb cap-form-control"
          >
            <label
              className="sc-bcXGCL fTPHCc cap-form-label"
              htmlFor="responses.0.value"
            >
              <span
                className="sc-bcXGCL dQChsN cap-text"
                style={
                  {
                    "marginLeft": 0,
                    "marginTop": 0,
                  }
                }
              >
                &lt;mock-value-for-field-"title"&gt;
              </span>
              <p
                className="sc-bcXGCL gPctOm cap-text"
              >
                global.optional
              </p>
            </label>
            <span
              className="sc-bcXGCL ifYgMR cap-form-guideline"
            >
              &lt;mock-value-for-field-"helpText"&gt;
            </span>
            <div
              className=" ql-editor wysiwyg-render"
              dangerouslySetInnerHTML={
                {
                  "__html": "<mock-value-for-field-"description">",
                }
              }
            />
            <input
              aria-required={false}
              className="sc-bcXGCL sc-dwnPIk egzrup eCNeCU cap-input"
              disabled={false}
              id="responses.0.value"
              name="responses.0.value"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              readOnly={false}
              required={false}
              type="text"
            />
          </div>
          <div
            className="sc-bcXGCL fVgOgb cap-form-control"
          >
            <label
              className="sc-bcXGCL hICbbA"
              htmlFor="charte"
            >
              <div
                className="sc-bcXGCL dawbeU cap-checkbox"
                style={
                  {
                    "marginLeft": 0,
                    "marginTop": 0,
                  }
                }
              >
                <input
                  aria-required={true}
                  className="sc-bcXGCL leuqnG cap-checkbox__input"
                  disabled={false}
                  id="charte"
                  name="charte"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  readOnly={false}
                  required={true}
                  style={
                    {
                      "marginLeft": 0,
                      "marginTop": 0,
                    }
                  }
                  type="checkbox"
                />
                <div
                  className="sc-bcXGCL cCxzTy cap-checkbox__box"
                />
              </div>
              <span
                className="sc-bcXGCL grQllb"
              >
                <span
                  className="sc-bcXGCL sc-cc425a65-0 keKWCf hMXkYl"
                >
                  registration.charte
                </span>
              </span>
            </label>
          </div>
          <div
            className="sc-bcXGCL kGpePR"
          >
            <div
              className=" ql-editor wysiwyg-render"
              dangerouslySetInnerHTML={
                {
                  "__html": "Jsuis o bottom",
                }
              }
            />
          </div>
        </div>
        <footer
          className="sc-bcXGCL fMWhlA cap-modal__footer"
        >
          <button
            className="sc-bcXGCL sc-gGvGpy kAXCTC iCdXwD cap-button"
            onClick={[Function]}
            style={
              {
                "marginLeft": 0,
                "marginTop": 0,
              }
            }
            type="button"
          >
            global.cancel
          </button>
          <button
            className="sc-bcXGCL sc-gGvGpy kAXCTC jrAhSN cap-button"
            id="confirm-login"
            type="submit"
          >
            global.register
          </button>
        </footer>
      </div>
    </div>
  </div>,
]
`;

exports[`<RegistrationModal /> renders only form 1`] = `
[
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <div
    aria-label="global.register"
    data-dialog={true}
    hidden={false}
    id="id-g"
    onAnimationEnd={[Function]}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    role="dialog"
    tabIndex={-1}
  >
    <div
      className="sc-bcXGCL embsrb sc-fvEvfv cap-modal__overlay"
      onClick={[Function]}
      style={
        {
          "opacity": 0,
        }
      }
    >
      <div
        className="sc-bcXGCL dRDYMK sc-fcCDYY ksOTIU cap-modal"
        style={
          {
            "opacity": 0,
            "transform": "translateY(-20px) translateZ(0)",
            "zIndex": 9000,
          }
        }
      >
        <header
          className="sc-bcXGCL jJSzZW cap-modal__header"
        >
          <div
            className="sc-bcXGCL jevVsb"
          >
            <h4
              className="sc-bcXGCL dwAFlO cap-heading"
              id="modal-title"
              style={
                {
                  "marginLeft": 0,
                  "marginTop": 0,
                }
              }
            >
              global.register
            </h4>
          </div>
          <button
            aria-describedby="modal-title"
            className="sc-bcXGCL cNICVM"
            onClick={[Function]}
            type="button"
          >
            <svg
              aria-hidden="false"
              className="sc-bcXGCL sc-oZHua JBVPO cCzERh cap-icon"
              fill="none"
              height="1em"
              role="img"
              viewBox="0 0 12 12"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M1 11 11 1M1 1l10 10"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={0.8}
              />
            </svg>
          </button>
        </header>
        <div
          className="sc-bcXGCL eqUaSq cap-modal__body"
        >
          <div
            className="sc-bcXGCL fVgOgb cap-form-control"
          >
            <label
              className="sc-bcXGCL fTPHCc cap-form-label"
              htmlFor=":r8:"
              style={
                {
                  "marginLeft": 0,
                  "marginTop": 0,
                }
              }
            >
              <span
                className="sc-bcXGCL dQChsN cap-text"
                style={
                  {
                    "marginLeft": 0,
                    "marginTop": 0,
                  }
                }
              >
                global.email
              </span>
            </label>
            <input
              aria-required={true}
              autoComplete="email"
              autoFocus={true}
              className="sc-bcXGCL sc-dwnPIk egzrup eCNeCU cap-input"
              disabled={false}
              id=":r8:"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="email.placeholder"
              readOnly={false}
              required={true}
              type="email"
            />
          </div>
          <div
            className="sc-bcXGCL klvDp"
          >
            <div
              className="sc-bcXGCL hQCGLB cap-form-control"
            >
              <label
                className="sc-bcXGCL fTPHCc cap-form-label"
                htmlFor=":r9:"
                style={
                  {
                    "marginLeft": 0,
                    "marginTop": 0,
                  }
                }
              >
                <span
                  className="sc-bcXGCL dQChsN cap-text"
                  style={
                    {
                      "marginLeft": 0,
                      "marginTop": 0,
                    }
                  }
                >
                  registration.password
                </span>
              </label>
              <div
                className="sc-bcXGCL sc-dwnPIk hsfhbV eCNeCU cap-input-outer"
              >
                <input
                  aria-required={true}
                  autoComplete="off"
                  autoFocus={true}
                  className="sc-bcXGCL dANhtW cap-input"
                  disabled={false}
                  id=":r9:"
                  name="plainPassword"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  readOnly={false}
                  required={true}
                  type="password"
                />
                <button
                  aria-describedby=":ra:"
                  className="sc-bcXGCL fROdoz"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onClickCapture={[Function]}
                  onFocusCapture={[Function]}
                  onKeyDownCapture={[Function]}
                  onKeyPressCapture={[Function]}
                  onMouseDown={[Function]}
                  onMouseDownCapture={[Function]}
                  onMouseEnter={[Function]}
                  onMouseMove={[Function]}
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="sc-bcXGCL sc-oZHua JBVPO cCzERh cap-icon cap-input-icon"
                    fill="none"
                    height="1em"
                    viewBox="0 0 12 10"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m1.903 9 8.333-8M4.65 8.134c.437.135.892.203 1.35.2 1.822.03 3.67-1.25 4.81-2.506a.74.74 0 0 0 0-.99 9 9 0 0 0-1.366-1.225M7.072 2.459a4.2 4.2 0 0 0-1.073-.126c-1.791-.03-3.644 1.223-4.81 2.505a.74.74 0 0 0 0 .99q.534.582 1.156 1.066"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                      strokeWidth={0.8}
                    />
                    <path
                      d="M4.333 5.333a1.666 1.666 0 0 1 1.666-1.666M7.666 5.333A1.667 1.667 0 0 1 5.999 7"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                      strokeWidth={0.8}
                    />
                  </svg>
                </button>
                <span
                  hidden={true}
                  id=":ra:"
                  style={
                    {
                      "position": "fixed",
                    }
                  }
                />
              </div>
            </div>
          </div>
          <div
            className="sc-bcXGCL fVgOgb cap-form-control"
          >
            <label
              className="sc-bcXGCL fTPHCc cap-form-label"
              htmlFor="username"
              style={
                {
                  "marginLeft": 0,
                  "marginTop": 0,
                }
              }
            >
              <span
                className="sc-bcXGCL dQChsN cap-text"
                style={
                  {
                    "marginLeft": 0,
                    "marginTop": 0,
                  }
                }
              >
                global.fullname
              </span>
            </label>
            <input
              aria-required={true}
              autoComplete="username"
              className="sc-bcXGCL sc-dwnPIk egzrup eCNeCU cap-input"
              disabled={false}
              id="username"
              minLength={2}
              name="username"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="global.placeholder.name"
              readOnly={false}
              required={true}
              type="text"
            />
          </div>
          <div
            className="sc-bcXGCL fVgOgb cap-form-control"
          >
            <label
              className="sc-bcXGCL fTPHCc cap-form-label"
              htmlFor="responses.0.value"
            >
              <span
                className="sc-bcXGCL dQChsN cap-text"
                style={
                  {
                    "marginLeft": 0,
                    "marginTop": 0,
                  }
                }
              >
                &lt;mock-value-for-field-"title"&gt;
              </span>
              <p
                className="sc-bcXGCL gPctOm cap-text"
              >
                global.optional
              </p>
            </label>
            <span
              className="sc-bcXGCL ifYgMR cap-form-guideline"
            >
              &lt;mock-value-for-field-"helpText"&gt;
            </span>
            <div
              className=" ql-editor wysiwyg-render"
              dangerouslySetInnerHTML={
                {
                  "__html": "<mock-value-for-field-"description">",
                }
              }
            />
            <input
              aria-required={false}
              className="sc-bcXGCL sc-dwnPIk egzrup eCNeCU cap-input"
              disabled={false}
              id="responses.0.value"
              name="responses.0.value"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              readOnly={false}
              required={false}
              type="text"
            />
          </div>
          <div
            className="sc-bcXGCL fVgOgb cap-form-control"
          >
            <label
              className="sc-bcXGCL hICbbA"
              htmlFor="charte"
            >
              <div
                className="sc-bcXGCL dawbeU cap-checkbox"
                style={
                  {
                    "marginLeft": 0,
                    "marginTop": 0,
                  }
                }
              >
                <input
                  aria-required={true}
                  className="sc-bcXGCL leuqnG cap-checkbox__input"
                  disabled={false}
                  id="charte"
                  name="charte"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  readOnly={false}
                  required={true}
                  style={
                    {
                      "marginLeft": 0,
                      "marginTop": 0,
                    }
                  }
                  type="checkbox"
                />
                <div
                  className="sc-bcXGCL cCxzTy cap-checkbox__box"
                />
              </div>
              <span
                className="sc-bcXGCL grQllb"
              >
                <span
                  className="sc-bcXGCL sc-cc425a65-0 keKWCf hMXkYl"
                >
                  registration.charte
                </span>
              </span>
            </label>
          </div>
        </div>
        <footer
          className="sc-bcXGCL fMWhlA cap-modal__footer"
        >
          <button
            className="sc-bcXGCL sc-gGvGpy kAXCTC iCdXwD cap-button"
            onClick={[Function]}
            style={
              {
                "marginLeft": 0,
                "marginTop": 0,
              }
            }
            type="button"
          >
            global.cancel
          </button>
          <button
            className="sc-bcXGCL sc-gGvGpy kAXCTC jrAhSN cap-button"
            id="confirm-login"
            type="submit"
          >
            global.register
          </button>
        </footer>
      </div>
    </div>
  </div>,
]
`;
